# mcq-ocr

./: .env.app.example  .env.example  .gitignore  README.md  README1.md  build-and-push.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  env.prod.example  package-lock.json  pyproject.toml  rename_script.py
2023_sample/: students_list.csv
auto_config/: config.py  test.py  utils.py
configurations/: v1.json  v2.json  v4.json
docs/: ENV.md  USER_MANUAL.md
fastapi_backend/: .dockerignore  .env copy  Dockerfile  Dockerfile.dev  README.md  env.example  init_db.py  pyproject.toml
fastapi_backend/app/: config.py  database.py  main.py  queue.py  websocket.py  websocket_auth.py
fastapi_backend/app/api/: deps.py
fastapi_backend/app/api/routes/: __init__.py  auth.py  dashboard.py  faculties.py  files.py  generator.py  jobs.py  marking.py  templates.py  users.py
fastapi_backend/app/core/: config.py
fastapi_backend/app/middleware/: __init__.py  authorization.py  user_state.py  websocket_auth.py
fastapi_backend/app/models/: __init__.py  base.py  faculty.py  file.py  marking_job.py  template.py  template_config_job.py  user.py
fastapi_backend/app/schemas/: auth.py  dashboard.py  faculty.py  file.py  marking.py  template.py  user.py
fastapi_backend/app/storage/: shared_storage.py
fastapi_backend/app/template_generator/: TemplateDrawer.py  __init__.py
fastapi_backend/app/template_generator/components/: Column.py  Question.py
fastapi_backend/app/utils/: security.py
fastapi_backend/init-db/: 01-init.sql
fastapi_backend/tests/: conftest.py  test_files.py  test_generator.py  test_marking.py  test_templates.py  test_users.py
fastapi_backend/tests/test_results/: attach_answer_sheets_20251005_182212.json  create_marking_20251005_182212.json  create_template_20251005_181547.json  delete_file_20251005_180143.json  delete_template_20251005_181547.json  download_file_id_20251005_180005.json  download_file_id_20251005_180143.json  download_file_path_20251005_180006.json  download_file_path_20251005_180143.json  generate_pdf_20251005_182559.json  generate_pdf_invalid_20251005_182559.json  get_file_20251005_182559.json  get_file_by_id_20251005_180143.json  get_file_not_found_20251005_182559.json  get_marking_20251005_182212.json  get_template_20251005_181547.json  list_files_20251005_180005.json  list_files_20251005_180143.json  list_markings_20251005_182212.json  list_templates_20251005_181547.json  start_marking_20251005_182212.json  update_marking_scheme_20251005_182212.json  update_template_20251005_181547.json  upload_file_20251005_180005.json  upload_file_20251005_180006.json  upload_file_20251005_180143.json
frontend/: tailwind.config.ts
frontend/app/: page.tsx
frontend/hooks/: useToast.tsx
index_recognision/: .dockerignore  .gitignore  DOCKERFILE  Dockerfile  Readme.md  cacheLoader.py  example.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_Detector.py  test_Recognizer.py  test_queue_integration.py
index_recognision/Detector/: CV2IndexSectionDetector.py  LineBasedIndexSectionDetector.py  __init__.py  config.py
index_recognision/Recognizer/: DoctrDetoctorRecognizer.py  DoctrRecognizer.py  __init__.py  config.py
index_recognision/storage/: nfs_storage.py
index_recognision/task_queue/: rabbitMQ.py
manujaya/: clustering.py
mcq_marking/: .dockerignore  Dockerfile  pyproject.toml  test_marking_job_queue_integration.py  test_marking_scheme_queue_integration.py  test_template_queue_integration.py
mcq_marking/app/: main.py
mcq_marking/app/anomalydetection/: anomaly_detector.py
mcq_marking/app/autograder/: autograder.py  marking.py
mcq_marking/app/autograder/utils/: draw_shapes.py  image_processing.py  template_parameters.py
mcq_marking/app/examples/: template_config_nfs_example.py
mcq_marking/app/indexListner/: IndexListner.py  indexValidator.py
mcq_marking/app/markingworker/: __init__.py  markingworker.py
mcq_marking/app/markingworker/processors/: __init__.py  job_processor_interface.py  marking_job_processor.py  marking_scheme_config_processor.py  template_config_processor.py
mcq_marking/app/models/: answer_sheet.py  marking_config_job.py  marking_job.py  marking_scheme.py  marking_scheme_config_job.py  template.py  template_config_job.py
mcq_marking/app/storage/: nfs_storage.py
mcq_marking/app/templateconfig/: clustering.py  common.py  config.py  example_config.json  utils.py
mcq_marking/app/utils/: EventRegistery.py  ThreadSafeDict.py  file_handelling.py
mcq_marking/mcqautograder/: autograder.py
mcq_marking_old/: Marksheetrun.ipynb  README.md  README1.md  commands.txt  pyproject.toml
mcq_marking_old/auto_config/: config.py
mcq_marking_old/configurations/: v3.json
mcq_marking_old/mcqautograder/: autograder.py  test.py
mcqautograder/: autograder.py  test.py
new_samples/: .~lock.students_list.csv#
next_frontend/: .dockerignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
next_frontend/app/: globals.css  layout.tsx
next_frontend/components/: ProtectedRoute.tsx
nginx/: nginx.conf.template
(+110 files in other folders)
