[project]
name = "env"
version = "0.1.0"
description = ""
authors = [
    {name = "Geesan Munasinghe",email = "sugithgeesan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "python-doctr (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
