[project]
name = "mcq-marking"
version = "0.1.0"
description = "MCQ marking and template Config system"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
# readme = "README.md"  # No README file exists
packages = [{include = "app"}]

requires-python = ">=3.13"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "opencv-python (>=4.8.0,<5.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "pika (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
