[tool.poetry]
name = "mcq-marking"
version = "0.1.0"
description = "MCQ marking and template Config system"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
pillow = ">=11.3.0,<12.0.0"
openpyxl = ">=3.1.5,<4.0.0"
opencv-python-headless = ">=4.8.0,<5.0.0"
numpy = ">=1.24.0,<2.0.0"
pika = ">=1.3.0,<2.0.0"
boto3 = "^1.40.28"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"