[tool.poetry]
name = "mcqautograder"
version = "0.1.0"
description = ""
authors = ["Gayashan Amarasinghe <gayashan.amarasinghe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
opencv-python = "^4.8.0"
pillow = "^10.0.0"
imutils = "^0.5.4"
scipy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
